@@ -322,7 +322,7 @@ char scn_file_name[max_file_name_length];
 boolean flags[128];
 
 /*:73*//*83:*/
-#line 1269 "common.w"
+#line 1267 "common.w"
 
 FILE*C_file;
 FILE*tex_file;
@@ -429,7 +429,7 @@ show_banner= show_happiness= show_progress= make_xrefs= true;
 #line 100 "common.w"
 
 /*84:*/
-#line 1276 "common.w"
+#line 1274 "common.w"
 
 scan_args();
 if(program==ctangle){
@@ -1176,7 +1176,7 @@ boolean found_web= false,found_change= false,found_out= false;
 strcpy(change_file_name,"/dev/null");
 while(--argc> 0){
 if((**(++argv)=='-'||**argv=='+')&&*(*argv+1))/*80:*/
-#line 1247 "common.w"
+#line 1245 "common.w"
 
 for(dot_pos= *argv+1;*dot_pos> '\0';dot_pos++)
 flags[(eight_bits)*dot_pos]= flag_change;
@@ -1196,7 +1196,7 @@ if(!found_web)/*77:*/
 {
 if(s-*argv> max_file_name_length-5)
 /*82:*/
-#line 1263 "common.w"
+#line 1261 "common.w"
 fatal("! Filename too long\n",*argv);
 
 
@@ -1227,7 +1227,7 @@ else if(!found_change)/*78:*/
 if(strcmp(*argv,"-")!=0){
 if(s-*argv> max_file_name_length-4)
 /*82:*/
-#line 1263 "common.w"
+#line 1261 "common.w"
 fatal("! Filename too long\n",*argv);
 
 
@@ -1250,7 +1250,7 @@ else if(!found_out)/*79:*/
 {
 if(s-*argv> max_file_name_length-5)
 /*82:*/
-#line 1263 "common.w"
+#line 1261 "common.w"
 fatal("! Filename too long\n",*argv);
 
 
@@ -1259,17 +1259,15 @@ fatal("! Filename too long\n",*argv);
 
 if(dot_pos==NULL){
 sprintf(tex_file_name,"%s.tex",*argv);
-sprintf(idx_file_name,"%s.idx",*argv);
-sprintf(scn_file_name,"%s.scn",*argv);
 sprintf(C_file_name,"%s.c",*argv);
 }else{
 strcpy(tex_file_name,*argv);
 strcpy(C_file_name,*argv);
-if(make_xrefs){
 *dot_pos= '\0';
+}
+if(make_xrefs){
 sprintf(idx_file_name,"%s.idx",*argv);
 sprintf(scn_file_name,"%s.scn",*argv);
-}
 }
 found_out= true;
 }
@@ -1278,7 +1276,7 @@ found_out= true;
 #line 1179 "common.w"
 
 else/*81:*/
-#line 1251 "common.w"
+#line 1249 "common.w"
 
 {
 if(program==ctangle)
@@ -1297,7 +1295,7 @@ else fatal(
 }
 }
 if(!found_web)/*81:*/
-#line 1251 "common.w"
+#line 1249 "common.w"
 
 {
 if(program==ctangle)
